pilot/pkg/security/authz/builder/testdata/log-all-in.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: log-all
  namespace: foo
spec:
  action: LOG
  rules:
    - {}
